--- a/static/homepage/package.json
+++ b/static/homepage/package.json
@@ -16,7 +16,9 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-toastify": "^7.0.3",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
